@@ -2,6 +2,7 @@
 
 # use 5.008;
 use ExtUtils::MakeMaker;
+use ExtUtils::PkgConfig;
 use Getopt::Long;
 
 my $rpmv;
@@ -24,7 +25,8 @@ foreach (qw(
 
 $rpmheaderlocation or die "Can't find rpmheader location";
 
-$rpmv ||= (`rpm --version` =~ /([\d\.]+)/)[0];
+my %cfg = ExtUtils::PkgConfig->find("rpm");
+$rpmv ||= $cfg{modversion};
 open(my $FH, "> rpmversion.h") or die "Can't open rpmversion.h";
 print $FH "/* File generated by Mafile.PL\n";
 print $FH ' * $Id$' . "\n";
@@ -86,7 +88,7 @@ WriteMakefile(
     VERSION_FROM => '../lib/RPM4.pm',
     OBJECT       => "RPM4.o $obj",
     INC	         => "-I$rpmheaderlocation",
-    LIBS         => "-lrpmsign -lrpm -lrpmio -lrpmbuild -lpopt -lz -lbz2 $ldd",
-    'CCFLAGS'    => "-Wall $fl",
+    LIBS         => [ $cfg{libs} . " -lrpmsign -lrpmbuild $ldd" ],
+    CCFLAGS      => "$cfg{cflags} -Wall $fl",
     depend       => { "RPM4.xs" => join(" ", @rpmconstantfiles) },
 );
